# phoenix

./: # Makefile for RISC OS Phoenix – Fu.txt  # Makefile.txt  CMakeLists.txt  Makefile  makefile.mak
apps/: netsurf.c  paint.c
drivers/: gpu.c
drivers/bluetooth/: bluetooth.c  bluetooth.h
drivers/gpu/: drm.h  gpu.c
drivers/mmc/: mmc.c  mmc.h
drivers/nvme/: mmc.c  nvme.c  sata_ahci.c
drivers/usb/: uasp.h  usb.h  usb_gadget.c  usb_gadget.h  usb_host.c  usb_mass_storage.c  usb_storage.c
kernel/: blockdriver.c  blockdriver.h  boot.c  dl.c  elf64.h  filecore.c  irq.c  irq.h  kernal.h  kernel.c  kernel.h  mmu.c  mmu.h  pci.c  pci.h  pipe.c  sched.c  scheduler.c  select.c  signal.c  spinlock.h  task.c  timer.c  vfs.c  vfs.h  wimp.h
net/: arp.c  arp.h  ethernet.h  ipv4.c  ipv6.c  socket.c  tcp.c  tcpip.c  tcpip.c – PhoenixNet TCPIP stack f.txt  udp.c
wimp/: filecore.c  menu.c  wimp.c  window.c
